@@ -6,4 +6,5 @@ Exec=nautilus-file-management-properties
 Icon=gnome-fs-directory
 Terminal=false
 Type=Application
+StartupNotify=true
 Categories=GNOME;Application;Settings;
