@@ -1,3 +1,12 @@
+2003-03-12  Alex Duggan  <aldug@astrolinux.com>
+
+	* Makefile.am: install nautilus-file-management-properties
+	.desktop file to the correct location so it's seen in
+	the gnome-panel menus
+
+	* nautilus-file-management-properties.desktop.in:
+	Add startup notification
+
 2003-03-12  Dave Camp  <dave@ximian.com>
 
 	* src/file-manager/fm-properties-window.c 
